Cambios y correcciones para tablero en la parte CAPC
Modificaciones varias  en reportes, Calificaciones, Tableros, etc.

--- a/TableroSLAs/PPMCsCrbCalidadCAPC.html
+++ b/TableroSLAs/PPMCsCrbCalidadCAPC.html
@@ -19,6 +19,16 @@
     </td>
   </tr>
 </table>
+<p>
+<table width="100%">
+  <tr style="BACKGROUND-COLOR: rgb(218,224,228)">
+    <td><a href="{lkCumplimiento_Src}" id="lkCumplimiento">Cumplimiento en<br>
+      Requisitos Funcionales</a></td> 
+    <td><a href="{lkCalidad_Src}" id="lkCalidad">Deductivas por Omisión</a></td> 
+    <td><a href="{lkRetraso_Src}" id="lkRetraso">Retraso en entregables</a></td>
+  </tr>
+</table>
+</p>
 <table width="100%">
   <tr>
     <td>&nbsp;</td> 
