--- a/TableroSLAs/SLAsCAPCLista.html
+++ b/TableroSLAs/SLAsCAPCLista.html
@@ -202,9 +202,11 @@
                   <!-- BEGIN ImageLink Img_DEDUC_OMISION --><a href="{Img_DEDUC_OMISION}" id="mc_c_ServContractual_mc_cImg_DEDUC_OMISION_{mc_c_ServContractual_mc_c:rowNumber}"><img style="BORDER-BOTTOM: 0px; BORDER-LEFT: 0px; BORDER-TOP: 0px; BORDER-RIGHT: 0px" alt="{Img_DEDUC_OMISION}" src="{Img_DEDUC_OMISION_Src}"></a><!-- END ImageLink Img_DEDUC_OMISION --></td> 
                 <td style="TEXT-ALIGN: center"><a href="{RETR_ENTREGABLE_Src}" id="mc_c_ServContractual_mc_cRETR_ENTREGABLE_{mc_c_ServContractual_mc_c:rowNumber}">{RETR_ENTREGABLE}</a>&nbsp; 
                   <!-- BEGIN ImageLink Img_RETR_ENTREGABLE --><a href="{Img_RETR_ENTREGABLE}" id="mc_c_ServContractual_mc_cImg_RETR_ENTREGABLE_{mc_c_ServContractual_mc_c:rowNumber}"><img style="BORDER-BOTTOM: 0px; BORDER-LEFT: 0px; BORDER-TOP: 0px; BORDER-RIGHT: 0px" alt="{Img_RETR_ENTREGABLE}" src="{Img_RETR_ENTREGABLE_Src}"></a><!-- END ImageLink Img_RETR_ENTREGABLE --></td> 
-                <td>{Obs_AP}<br>
+                <td>
+                  <p>{Obs_AP}<br>
                   {DetalleCalidad}<br>
-                  {Observaciones}&nbsp;</td>
+                  {Observaciones}<br>{rf_obs}<br>{cal_obs}</p>
+                </td>
               </tr>
  <!-- END Row -->
               <!-- BEGIN NoRecords -->
