--- a/TableroSLAs/TableroSLAs.html
+++ b/TableroSLAs/TableroSLAs.html
@@ -542,11 +542,8 @@
                   {CumplenCUMPL_REQ_FUNC}{TotCUMPL_REQ_FUNC}{CUMPL_REQ_FUNC}</td> 
                 <td style="TEXT-ALIGN: center"><img id="pnlSLAsCAPCgrdSLAsCAPCImg_CALIDAD_PROD_TERM_{grdSLAsCAPC:rowNumber}" alt="" src="{Img_CALIDAD_PROD_TERM}"><br>
                   {CumplenCALIDAD_PROD_TERM}{TotCALIDAD_PROD_TERM}{CALIDAD_PROD_TERM}</td> 
-                <td style="TEXT-ALIGN: center">
-                  <p>&nbsp;<img id="pnlSLAsCAPCgrdSLAsCAPCImg_DEDUC_OMISION" alt="" src="{Img_DEDUC_OMISION}"></p>
- 
-                  <p>{CumplenDEDUC_OMISION}{TotDEDUC_OMISION}{DEDUC_OMISION}</p>
-                </td> 
+                <td style="TEXT-ALIGN: center"><img id="pnlSLAsCAPCgrdSLAsCAPCImg_DEDUC_OMISION" alt="" src="{Img_DEDUC_OMISION}"><br>
+                  {CumplenDEDUC_OMISION}{TotDEDUC_OMISION}{DEDUC_OMISION} </td> 
                 <td style="TEXT-ALIGN: center"><img id="pnlSLAsCAPCgrdSLAsCAPCImg_RETR_ENTREGABLE_{grdSLAsCAPC:rowNumber}" alt="" src="{Img_RETR_ENTREGABLE}"><br>
                   {CumplenRETR_ENTREGABLE}{TotRETR_ENTREGABLE}{RETR_ENTREGABLE}</td>
                 <!--<td style="TEXT-ALIGN: center"><img id="pnlSLAsCAPCgrdSLAsCAPCImg_CAL_COD_{grdSLAsCAPC:rowNumber}" alt="" src="{Img_CAL_COD}"><br>
