Modificaciones en pantalla de reportes
Cambios;  Para todos los usuario se muestran todos los reportes pero
solo se activan los que tiene acceso la cuenta "logeada" ,  Se
diferencian los rapes; entre administrativos y operativos asi como su
funcionamiento del menu de reportes. También en el header se apaga o se
enciende la opción "Reporte sitio Sat" si la cuenta es de rape o no.

--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -88,15 +88,16 @@
  
     </div>
  
-<!--    <div>
+    <!--    <div>
       &nbsp; 
     </div>-->
- <!-- END Panel Panel2 -->
-    <!-- BEGIN Panel Panel4 --><!--&nbsp;--> 
+    <!-- END Panel Panel2 -->
+    <!-- BEGIN Panel Panel4 -->
+    <!--&nbsp;-->
     <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
       <tr>
         <td class="HeaderLeft"></td> 
-        <td class="th"><strong>&nbsp;<a href="{Link6_Src}" id="HeaderPanel2Link6" target="_blank">Reportes Sitio SAT</a>&nbsp;</strong></td> 
+        <td class="th"><strong>&nbsp;<!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes Sitio SAT</a><!-- END Link Link6 -->&nbsp;{LabelReportesSitioSAT}</strong></td> 
         <td class="HeaderRight"></td> 
       </tr>
  
