Se agrega un botón de ayuda al header
Se agrega un botón de ayuda al header

--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -97,7 +97,8 @@
     <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
       <tr>
         <td class="HeaderLeft"></td> 
-        <td class="th"><strong>&nbsp;<!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes Sitio SAT</a><!-- END Link Link6 -->&nbsp;{LabelReportesSitioSAT}</strong></td> 
+        <td class="th"><strong>&nbsp;
+          <!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes Sitio SAT</a><!-- END Link Link6 -->&nbsp;{LabelReportesSitioSAT}</strong></td> 
         <td class="HeaderRight"></td> 
       </tr>
  
@@ -119,6 +120,7 @@
             &nbsp;<img style="MARGIN-TOP: 5px" id="HeaderImage1" alt="Cerrar Sesión" src="{imgCierrePath}">&nbsp; <a href="{Link1_Src}" id="HeaderPanel1Link1">Cerrar Sesión</a> 
           </div>
  </td> 
+        <td><a href="http://webiterasrv2:8080/MyMSDMA4/PlayerPackage/default.htm" target="_blank"><img border="0" src="images/ayuda2.jpg" width="24" height="24"></a> </td> 
       </tr>
  
     </table>
