Correcciones en plantillas CAPC
Varias correcciones  y mejoras en la administrtración y medición del
CAPC

--- a/TableroSLAs/SLAsCAPCLista.html
+++ b/TableroSLAs/SLAsCAPCLista.html
@@ -205,7 +205,9 @@
                 <td>
                   <p>{Obs_AP}<br>
                   {DetalleCalidad}<br>
-                  {Observaciones}<br>{rf_obs}<br>{cal_obs}</p>
+                  {Observaciones}<br>
+                  {rf_obs}<br>
+                  {cal_obs}</p>
                 </td>
               </tr>
  <!-- END Row -->
