Se agrega liga de tutorial relativa para verse en sat y capc
Se agrega liga de tutorial relativa para verse en sat y capc

--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -17,7 +17,7 @@
           <!-- BEGIN Panel Panel3 -->
           <td>
             <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-<a href="{lkUniverso_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkUniverso">Universo de Medición</a> 
+<a href="{lkUniverso_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkUniverso">Universo de medición</a> 
             </div>
  </td> 
           <td>
@@ -27,18 +27,18 @@
  </td> 
           <td>
             <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-<a href="{lkRequerimientos_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkRequerimientos">SLAs de Apertura</a> 
+<a href="{lkRequerimientos_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkRequerimientos">SLAs de apertura</a> 
             </div>
  </td> 
           <td>
             <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-<a href="{lkPPMCCierre_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkPPMCCierre">SLAs de Cierre</a> 
+<a href="{lkPPMCCierre_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkPPMCCierre">SLAs de cierre</a> 
             </div>
  </td> 
           <td>
             <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
 <a href="{Link2_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3Link2">Eficiencia<br>
-              Presupuestal</a> 
+              presupuestal</a> 
             </div>
  </td> 
           <td>
@@ -49,7 +49,7 @@
           <td>
             <!-- BEGIN Panel pnlMenuAdmin -->
             <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-              <!-- BEGIN Link lkAdmin --><a href="{lkAdmin_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenupnlMenuAdminlkAdmin">Admin</a><!-- END Link lkAdmin -->
+              <!-- BEGIN Link lkAdmin --><a href="{lkAdmin_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenupnlMenuAdminlkAdmin">Admón.</a><!-- END Link lkAdmin -->
             </div>
  <!-- END Panel pnlMenuAdmin --></td> 
         </tr>
@@ -80,7 +80,7 @@
       <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td class="HeaderLeft"></td> 
-          <td class="th"><strong>&nbsp;<a href="{Link5_Src}" id="HeaderPanel2Link5">Métricas y Mediciones</a></strong>&nbsp;</td> 
+          <td class="th"><strong>&nbsp;<a href="{Link5_Src}" id="HeaderPanel2Link5">Métricas y mediciones</a></strong>&nbsp;</td> 
           <td class="HeaderRight"></td> 
         </tr>
  
@@ -97,8 +97,8 @@
     <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
       <tr>
         <td class="HeaderLeft"></td> 
-        <td class="th"><strong>&nbsp;
-          <!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes Sitio SAT</a><!-- END Link Link6 -->&nbsp;{LabelReportesSitioSAT}</strong></td> 
+        <td class="th"><strong>&nbsp; 
+          <!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes sitio SAT</a><!-- END Link Link6 -->&nbsp;{LabelReportesSitioSAT}</strong></td> 
         <td class="HeaderRight"></td> 
       </tr>
  
@@ -120,7 +120,7 @@
             &nbsp;<img style="MARGIN-TOP: 5px" id="HeaderImage1" alt="Cerrar Sesión" src="{imgCierrePath}">&nbsp; <a href="{Link1_Src}" id="HeaderPanel1Link1">Cerrar Sesión</a> 
           </div>
  </td> 
-        <td><a href="http://webiterasrv2:8080/MyMSDMA4/PlayerPackage/default.htm" target="_blank"><img border="0" src="images/ayuda2.jpg" width="24" height="24"></a> </td> 
+        <td><a href="/MyMSDMA4/PlayerPackage/default.htm" target="_blank"><img border="0" src="images/ayuda2.jpg" width="24" height="24"></a> </td> 
       </tr>
  
     </table>
